# wb_alerter

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  db.py  docker-compose.yaml  init_db.sql  main.py  pyproject.toml  test.py  wb.py
.github/workflows/: build.yml  pylint.yml
tests/: pytest.ini  test_main.py
