[project]
name = "wb_alerter"
version = "2024.10.04"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "telebot",
    "psycopg2-binary",
    "fuzzywuzzy",
    "python-Levenshtein",
    "aiohttp"
]

[project.optional-dependencies]
dev = [
    "ipython",

    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-order",
    "pytest-dotenv",

    "black",

    "flake8-absolute-import",
    "flake8-bugbear",
    "flake8-cognitive-complexity",
    "flake8-commas",
    "flake8-eradicate",
    "flake8-fixme",
    "flake8-isort>=4.0.0",
    "flake8-multiline-containers",
    "flake8-mutable",
    "flake8-pep3101",
    "flake8-print",
    "flake8-printf-formatting",
    "flake8-pytest",
    "flake8-pytest-style",
    "flake8-quotes",
    "flake8-simplify",
    "flake8-todo",
    "flake8-variables-names",
    "flake8-walrus",
    "flake8-use-fstring",
    "flake8-pyproject",
]

[tool.flake8]
max-line-length = 119
ignore = [
    "E800", # Found commented out code
    "PT001", # use @pytest.fixture() over @pytest.fixture
    "W503",
    "W504",
    "E203"
]
exclude = [
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
known_standard_library = ["typing"]
skip_glob = [".venv", "venv"]

[tool.black]
line-length = 119
skip-string-normalization = true
